# appa

./: .gitignore  LICENSE  README.md  myst.yml  pyproject.toml  structure.xyz
.github/workflows/: deploy.yml
appa/: __init__.py  build.py  chop.py  cp2k.py  interface.py  lammps.py  learning_curves.py  md.py  plumed.py  utils.py
appa/cli/: appa.py  build.py  convert.py  equilibrate.py  lammps.py  plumed.py  select.py  vasp.py
docs/: building.ipynb  building.md  dynamics.md  index.md  install.md  myst.yml  plumed.md  selection.md  training.md
docs/data/: equilibrated.xyz  interface.xyz  lucas.mplstyle
examples/: cp2k_params.yaml  lammps-array-job  vasp-job  vasp_params.yaml
examples/data/: platinum-solvated-protons.xyz
